fix overflow in f-104-l02

--- a/f-104-l02/style.css
+++ b/f-104-l02/style.css
@@ -32,7 +32,8 @@ nav {
 }
 
 nav figure {
-    overflow: clip;
+    overflow: hidden;
+    flex: 0 0 auto;
 }
 
 nav img {
